<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_current_news">Current News</string>
    <string name="title_sports">Sports</string>
    <string name="title_business">Business</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_archive">Archives</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
