<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_current"
        android:icon="@drawable/current_news"
        android:title="@string/title_current_news" />

    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/exercise"
        android:title="@string/title_sports" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/business"
        android:title="@string/title_business" />

    <item
        android:id="@+id/navigation_lifestyle"
        android:icon="@drawable/lifestyle"
        android:title="@string/title_lifestyle" />
    <item
        android:id="@+id/navigation_archives"
        android:icon="@drawable/archive"
        android:title="@string/title_archive" />
</menu>